# anthropic-clio-impl

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
01/6a32a54741/: metadata.json
01/6a32a54741/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
62/63486e8b93/: metadata.json
62/63486e8b93/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
6e/5512b12d17/: metadata.json
6e/5512b12d17/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
6e/5512b12d17/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
clio-ui-v2/: .gitignore  Makefile  README.md  bun.lockb  package.json
clio-ui-v2/src/app/: globals.css  layout.tsx  page.tsx
clio-ui-v2/src/components/: theme-toggle.tsx
clio-ui-v2/src/hooks/: use-sse-stream.ts
configs/: default.yaml
docs/: clio_implementation_plan.md  input_jsonl_contract.md  source_adapter_recipes.md  troubleshooting.md
ed/f35600152c/: metadata.json
scripts/: normalize_external_jsonl.py  promote_partial_phase2.py
src/clio_pipeline/: __init__.py  __main__.py  cli.py  config.py  mock_data.py  runs.py  schemas.py
tests/: test_cli.py  test_clustering.py  test_config.py  test_embedding.py  test_evaluate.py  test_facet_extraction.py  test_hierarchy.py  test_labeling.py  test_langsmith.py  test_load.py  test_mock_data.py  test_normalize_external_jsonl.py  test_privacy_audit.py  test_run_pipeline.py  test_runs.py  test_save.py  test_schemas.py  test_viz_cli.py  test_viz_loader.py
(+58 files in other folders)
